welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: not found: value i
	setCouleurBrosse(tab((i+decal)%(getWorldHeight())))
                              ^